feat: 메인보드 호환성

--- a/data/crawling/Danawa_modify_ram.ipynb
+++ b/data/crawling/Danawa_modify_ram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "8017fc7e",
    "metadata": {
     "tags": []
@@ -139,6 +139,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "id": "d1fa4a3d-a5c8-4a88-882f-13241f7e5912",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "today = time.strftime('%y%m%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "id": "6671890c-2cc8-45cf-915d-38396c3958a8",
    "metadata": {
@@ -146,14 +158,222 @@
    },
    "outputs": [],
    "source": [
-    "today = time.strftime('%y%m%d')\n",
+    "\n",
     "pd.DataFrame(ram).to_csv(f'part_ram{today}.csv', index=None)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "452db919-e390-472b-8faf-0d8dbdf60f63",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "mb = pd.read_csv('../part_mainboard230920.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "145cbb17-d088-4da6-9ff5-472bd2ae4f06",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['M-ATX', 'ATX', 'M-iTX', 'E-ATX', 'EEB', 'CEB', 'Pico-iTX',\n",
+       "       'U-ATX', nan, 'XL-ATX', '8.5x5.6cm', '기타', '(30.48x26.67cm)',\n",
+       "       '(31.24x25.65cm)', '기타 (10x7.9cm)', 'M-DTX', '11.5x7.8x1.4cm',\n",
+       "       '6.96x4.5cm'], dtype=object)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mb.form_factor.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "69be9d0a-440c-4f43-9777-74f5b8e41e14",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(len(mb)):\n",
+    "    ff = mb.loc[i, 'form_factor']\n",
+    "    if type(ff) == float: continue\n",
+    "    if ff.startswith('CEB'):\n",
+    "        mb.loc[i, 'form_factor'] = 'CEB'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "e41321e3-c76f-46bf-aa97-09ad55c567f4",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(mb).to_csv(f'../part_mainboard{today}.csv', index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "9f01d87b-a47d-4968-9dc3-f2a2d6347143",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ssd = pd.read_csv('../part_ssd230920.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "7ec0cd20-6b83-4f6e-9057-0b9b08f6e979",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['M.2 (2280)', '6.4cm(2.5형)', 'M.2 (2230)', 'Mini SATA(mSATA)',\n",
+       "       'M.2 (2242)', nan, 'PCIe 카드', 'SATADOM', 'M.2 (22110)',\n",
+       "       'Mac Pro용(2019년형)', '4.6cm(1.8형)'], dtype=object)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssd.form_factor.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "0f9a2c5e-96b6-40be-a8f4-b3839b971054",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "for i in range(len(ssd)):\n",
+    "    v = ssd.loc[i, 'volume']\n",
+    "    if type(v) == float: continue\n",
+    "    if 'TB' in v:\n",
+    "        ssd.loc[i, 'volume'] = str(float(ssd.loc[i, 'volume'].replace('TB', '')) * 1024)\n",
+    "    elif 'GB' in v:\n",
+    "        ssd.loc[i, 'volume'] = ssd.loc[i, 'volume'].replace('GB', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "75f1a3d5-16e3-46ef-a815-c3008368d6ee",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(ssd).to_csv(f'../part_ssd{today}.csv', index=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "id": "c1dc39d2-202d-4c34-9e1d-fd3a09b4784b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2280'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = 'M.2 (2280)'\n",
+    "k[k.index('22'):-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "8d8d5440-d2e1-46df-9de2-d6d6fa735419",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['PCIe4.0x4 (64GT/s)', 'PCIe3.0x4 (32GT/s)', 'SATA3 (6Gb/s)',\n",
+       "       'PCIe5.0x4 (128GT/s)', 'U.2 (PCIe3.0x4)', 'PCIe3.1x4 (32GT/s)',\n",
+       "       'PCIe3.0x2 (16GT/s)', nan, 'SATA3(6Gb/s)', 'PCIe3.0x8 (64GT/s)',\n",
+       "       'PCIe2.0x4 (20GT/s)', 'PCIe4.0x8 (128GT/s)', 'E-IDE',\n",
+       "       'PCIe3.0x16 (128GT/s)', 'U.2 (PCIe4.0x4)', 'PCIe2.0x1 (5GT/s)',\n",
+       "       'ZIF'], dtype=object)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ssd.interface.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "194ea1a8-87aa-4230-a0a4-fa221f8fd5fa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 4.,  6.,  2.,  7.,  8.,  3., nan, 10.,  5., 11., 16., 13., 21.])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mb.sata3_number.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "efc3c02f-9262-4fed-86e9-e26baf648585",
+   "id": "f5975288-b415-4336-a569-57fb7fb7f4a1",
    "metadata": {},
    "outputs": [],
    "source": []
