--- a/data/analysis/kmeans_quotations.ipynb
+++ b/data/analysis/kmeans_quotations.ipynb
@@ -1999,6 +1999,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 117,
+   "id": "bbea40b4-a46e-461c-bcea-3221a1e14e14",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "k = [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "id": "28f5b128-5b7e-43a0-8935-4409e222265a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "if not k: print(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 94,
    "id": "c9d3f99c-fe55-41ca-b5a9-8c7e8b02c8b9",
    "metadata": {
