--- a/data/crawling/Danawa_crawl_mainboard.ipynb
+++ b/data/crawling/Danawa_crawl_mainboard.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "7ff2e9d5",
    "metadata": {
     "tags": []
    },
@@ -31,6 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "e116b0ce",
    "metadata": {
     "tags": []
    },
@@ -56,6 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "5ee6039c",
    "metadata": {
     "tags": []
    },
@@ -80,6 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "3a142530",
    "metadata": {
     "tags": []
    },
@@ -117,6 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "b271df2b",
    "metadata": {
     "tags": []
    },
@@ -134,6 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "b5d34061",
    "metadata": {
     "tags": []
    },
@@ -160,6 +166,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "2ae6f3ae",
    "metadata": {
     "tags": []
    },
@@ -177,6 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "cda87518",
    "metadata": {
     "tags": []
    },
@@ -190,6 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "ce72203b",
    "metadata": {},
    "outputs": [
     {
@@ -367,6 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "cd0d9a70",
    "metadata": {
     "tags": []
    },
@@ -382,6 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6126f310",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -389,7 +400,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -403,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
