시연시나리오 작성

--- a/exec/시연시나리오.md
+++ b/exec/시연시나리오.md
@@ -1,59 +1,75 @@
-# 1.
+# 1. 메인 페이지
 
 ![img1](/img/sisi1.PNG)
+Recommend 버튼을 눌러 추천 페이지 입장
 
-# 2.
+# 2. 부품 선택 페이지1
 
 ![img2](/img/sisi2.PNG)
+고정으로 넣고 싶은 부품이 있다면 '네' 클릭, 없다면 '아니오' 클릭
 
-# 3.
+# 3. 부품 선택 페이지2
 
 ![img3](/img/sisi3.PNG)
+부품 선택 페이지1의 '네'를 누르면 나오는 페이지. 고정으로 견적에 넣고 싶은 부품의 카테고리를 선택 (CPU, 메인보드 등)
 
-# 4.
+# 4. 부품 선택 페이지3
 
 ![img4](/img/sisi4.PNG)
+앞서 선택한 부품 카테고리에 속한 부품 검색 및 선택 페이지
+견적에 넣고 싶은 부품의 이름을 검색하여 견적에 포함할 수 있음
 
-# 5.
+# 5. 용도 선택 페이지
 
 ![img5](/img/sisi5.PNG)
+주로 사용할 용도를 선택. 다중 선택 가능
 
-# 6.
+# 6. 용도 선택 페이지
 
 ![img6](/img/sisi6.PNG)
+각 용도를 클릭하여 선택 가능
 
-# 7.
+# 7. 세부 프로그램 선택 페이지
 
 ![img7](/img/sisi7.PNG)
+앞서 선택한 용도의 세부 프로그램을 검색하여 선택 가능.
 
-# 8.
+# 8. 예산 입력 페이지
 
 ![img8](/img/sisi8.PNG)
+가용 예산을 입력할 수 있음. 앞서 부품 선택페이지에서 부품을 선택했다면, 해당 부품을 소유하고 있는지 아닌지 선택 가능
 
-# 9.
+# 9. 예산 입력 페이지
 
 ![img9](/img/sisi9.PNG)
+예산을 만원 단위로 입력 가능
 
-# 10.
+# 10. 우선 순위 선택 페이지
 
 ![img10](/img/sisi10.PNG)
+성능을 만족하고, 비슷한 가격대의 견적이 여러개일 경우 어떤 기능에 보다 우선 순위를 둘 것인가 선택 가능.
 
-# 11.
+# 11. 우선 순위 선택 페이지
 
 ![img11](/img/sisi11.PNG)
+우선 순위 다중 선택 가능
 
-# 12.
+# 12. 추천 견적 페이지
 
 ![img12](/img/sisi12.PNG)
+앞서 입력한 정보를 바탕으로 추천된 견적 확인 가능.
 
-# 13.
+# 13. 견적 상세 모달
 
 ![img13](/img/sisi13.PNG)
+각 견적을 클릭하면 세부 정보를 확인할 수 있음.
 
-# 14.
+# 14. 견적서 이름 지정 모달
 
 ![img14](/img/sisi14.PNG)
+견적서에 이름을 붙여 저장할 수 있음.
 
-# 15.
+# 15. 견적함 페이지
 
 ![img15](/img/sisi15.PNG)
+앞서 저장한 견적을 확인 가능한 페이지.
