시연시나리오 수정

--- a/exec/시연시나리오.md
+++ b/exec/시연시나리오.md
@@ -1,75 +1,76 @@
 # 1. 메인 페이지
 
-![img1](/img/sisi1.PNG)
+![sisi1](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/86b7e28c-0854-45e4-93cf-fcd76eda5f80)
 Recommend 버튼을 눌러 추천 페이지 입장
 
 # 2. 부품 선택 페이지1
 
-![img2](/img/sisi2.PNG)
+![sisi2](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/9d99bf6a-16b9-47d0-88dc-dbe1a597ca02)
 고정으로 넣고 싶은 부품이 있다면 '네' 클릭, 없다면 '아니오' 클릭
 
 # 3. 부품 선택 페이지2
 
-![img3](/img/sisi3.PNG)
+![sisi3](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/b00ae8d6-d696-422a-b4f0-291684429edd)
 부품 선택 페이지1의 '네'를 누르면 나오는 페이지. 고정으로 견적에 넣고 싶은 부품의 카테고리를 선택 (CPU, 메인보드 등)
 
 # 4. 부품 선택 페이지3
 
-![img4](/img/sisi4.PNG)
+![sisi4](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/894a57b1-d85a-450f-82e3-48f15c0f9830)
 앞서 선택한 부품 카테고리에 속한 부품 검색 및 선택 페이지
 견적에 넣고 싶은 부품의 이름을 검색하여 견적에 포함할 수 있음
 
 # 5. 용도 선택 페이지
 
-![img5](/img/sisi5.PNG)
+![sisi5](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/4cd3ad34-05ad-4777-9691-b51a6cb6be94)
 주로 사용할 용도를 선택. 다중 선택 가능
 
 # 6. 용도 선택 페이지
 
-![img6](/img/sisi6.PNG)
+![sisi6](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/908a4ea5-f094-497d-8e01-074209cdfb23)
+
 각 용도를 클릭하여 선택 가능
 
 # 7. 세부 프로그램 선택 페이지
 
-![img7](/img/sisi7.PNG)
+![sisi7](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/fbba81a9-a9df-4df1-b655-d286ba3f2cdf)
 앞서 선택한 용도의 세부 프로그램을 검색하여 선택 가능.
 
 # 8. 예산 입력 페이지
 
-![img8](/img/sisi8.PNG)
+![sisi8](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/6a30315d-5d0b-418a-a5fb-588190851c41)
 가용 예산을 입력할 수 있음. 앞서 부품 선택페이지에서 부품을 선택했다면, 해당 부품을 소유하고 있는지 아닌지 선택 가능
 
 # 9. 예산 입력 페이지
 
-![img9](/img/sisi9.PNG)
+![sisi9](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/234c70ff-876f-44bd-a9cf-d41c92645ff9)
 예산을 만원 단위로 입력 가능
 
 # 10. 우선 순위 선택 페이지
 
-![img10](/img/sisi10.PNG)
+![sisi10](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/bed58e4c-760c-4574-a42b-e7866c774ff3)
 성능을 만족하고, 비슷한 가격대의 견적이 여러개일 경우 어떤 기능에 보다 우선 순위를 둘 것인가 선택 가능.
 
 # 11. 우선 순위 선택 페이지
 
-![img11](/img/sisi11.PNG)
+![sisi11](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/9b45ce74-0942-4f9b-874c-b1d315ff60a9)
 우선 순위 다중 선택 가능
 
 # 12. 추천 견적 페이지
 
-![img12](/img/sisi12.PNG)
+![sisi12](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/1a9ffcda-0a55-4b29-8b42-d298eaf37846)
 앞서 입력한 정보를 바탕으로 추천된 견적 확인 가능.
 
 # 13. 견적 상세 모달
 
-![img13](/img/sisi13.PNG)
+![sisi13](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/a5c3cd2a-f9e7-49e3-81e1-902e155d8112)
 각 견적을 클릭하면 세부 정보를 확인할 수 있음.
 
 # 14. 견적서 이름 지정 모달
 
-![img14](/img/sisi14.PNG)
+![sisi14](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/b87406d8-6b4c-4db1-9ee2-dd034ab32d86)
 견적서에 이름을 붙여 저장할 수 있음.
 
 # 15. 견적함 페이지
 
-![img15](/img/sisi15.PNG)
+![sisi15](https://github.com/CS-STUDY-955/Algorithms/assets/68081743/97b9e65d-7ddd-4844-82d9-a75a69fd4098)
 앞서 저장한 견적을 확인 가능한 페이지.
